// Copyright (c) "Neo4j"
// Neo4j Sweden AB [https://neo4j.com]

syntax = "proto2";

package neo4j_gds;

// XXX: note that we use signed integers as ids for now as BQ INTEGER types
//      don't natively support uint64!

message Node {
        required int64 node_id = 1;
        repeated string labels = 2;
        optional string properties = 3;
}

message Edge {
        required int64 source_node_id = 1;
        required int64 target_node_id = 2;
        required string type = 3;
        optional string properties = 4;
}
